@@ -210,6 +210,13 @@ requirements to become an official GNU project). The support for
 L<Locale::Po4a::Texinfo(3pm)|Texinfo> in po4a is still at the beginning.
 Please report bugs and feature requests.
 
+=item gemtext (very highly experimental parser)
+
+The native plain text format of the Gemini protocol.  The extension
+".gmi" is commonly used.  Support for this module in po4a is still in
+its infancy.  If you find anything, please file a bug or feature
+request.
+
 =item Others supported formats
 
 Po4a can also handle some more rare or specialized formats, such as the
