@@ -1,0 +1,21 @@
+This is a normal text line.
+
+=> gemini://example.org An example link
+
+``` alt text
+Here is a preformatted text.
+```
+
+Here are exactly two blank lines:
+
+
+# Heading
+
+## Sub Heading
+
+### Sub sub heading
+
+* Item 1
+* Item 2
+
+> This is a quote.
