@@ -1,0 +1,21 @@
+THIS IS A NORMAL TEXT LINE.
+
+=> gemini://example.org AN EXAMPLE LINK
+
+``` ALT TEXT
+HERE IS A PREFORMATTED TEXT.
+```
+
+HERE ARE EXACTLY TWO BLANK LINES:
+
+
+# HEADING
+
+## SUB HEADING
+
+### SUB SUB HEADING
+
+* ITEM 1
+* ITEM 2
+
+> THIS IS A QUOTE.
