@@ -8,6 +8,9 @@ __   __/ _ \|___  / |
  \ V /| |_| | / / | |
   \_/  \___(_)_/  |_|             (not released yet)
 
+Gemtext:
+ * New module (GitHub's #466) [gemmaro].
+
 =======================================================================
         ___  _____ ___
 __   __/ _ \|___  / _ \
